# Hackathon1

./: Makefile  Readme.md
Chris/: Dockerfile  main.cpp  multi.cpp
DeVilliers/: .gitignore  Benchmark.cs  Dockerfile  Program.cs
Hanu/: Dockerfile  main  main.cpp
Jaco/: docker-compose.debug.yml  dockerfile
Jaco/node/: app.js  program.js
Jaco/src/: Singleton.java  Timer.java  TreadRunner.java  app.js  main.java  package.json  program.js
Keaton/: Cargo.toml  Dockerfile
Keaton/src/: main.rs
Kinson/: docker-compose.yml  dockerfile  package.json  readme.md
Kinson/src/: app.js  helper.js  prime-number.js  stopwatch.js
Kobus/: dockerfile  main.py
Patric/: Benchmark.cs  ParallelEx.cs  Patric.csproj  Program.cs  dockerfile
Shaylen/: dockerfile
Shaylen/src/: App.java  Main.java
Zandre/: Benchmark.cs  Program.cs
tools/: package-lock.json  package.json
tools/src/: formatter.ts  formatter_factory.ts  index.ts  models.ts
tools/src/commands/: benchmark.ts
tools/src/formatters/: table.ts
tools/src/services/: report.ts
