[package]
name = "docker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29", features = ["full"] }
stopwatch = "0.0.7"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
